--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,136 @@
 body {
     background-color: var(--bg-primary);
+    width: 100vw;
+    height: 100vh;
+    padding-inline: 32px;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+h2 {
+    margin-top: 10px;
+}
+
+input {
+    border-radius: 12px;
+    width: 326px;
+    height: 44px;
+    margin-top: 40px;
+    margin-bottom: 16px;
+    padding-block: 11px;
+    padding-inline: 16px 136px;
+    outline: none;
+
+    background-color: var(--bg-secondary);
+    border: 2px solid var(--border-primary);
+    font: 400 16px/140% var(--ff-sans);
+
+    &:hover {
+        border: 2px solid var(--border-hover); 
+    }
+
+    &:focus {
+        border: 2px solid var(--color-brand);
+    }
 }
 
 
 
+form button {
+    font: var(--label);
+    border-radius: 12px;
+    width: 326px;
+    height: 44px;
+
+    color: #fff;
+    background-color: var(--color-brand);
+    border: 0;
+    cursor: pointer;
+
+    &:hover {
+        background-color: var(--color-brand-hover);
+    }
+}
 
 
+ul {
+    display: grid;
+    list-style: none;
+    margin-top: 42px;
+    
+}
 
+li {
+    display: flex;
+    align-items: center;
+    width: 327px;
+    height: 57px;
+    border-radius: 12px;
+    margin-bottom: 12px;
+    padding-block: 12px;
 
+    background-color: var(--bg-secondary);
+    font: var(--p);
 
+    justify-content: space-between;
 
+    & label {
+        display: flex;
+        align-items: center;
+        flex: 1;
+    }
+}
 
+.item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px;
+    gap: 12px;
+    
+    width: 327px;
+    height: 57px;
+    
+    background: #FFFFFF;
+    border-radius: 12px;
+    
+}
 
+.item input[type="checkbox"] {
+    display: none;
+}
 
+.item input[type="checkbox"] + span::before {
+    content: "";
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    margin-right: 12px;
+    background-image: url(/assets/icons/check-void.svg);
+    background-size: cover;
+}
 
+.item input[type="checkbox"]:hover + span::before {
+    background-image: url(/assets/icons/check-hover.svg);
+}
 
+.item input[type="checkbox"]:checked + span::before {
+    background-image: url(/assets/icons/check-selected.svg);
+}
 
+.delete-button {
+    background: none;
+    background-image: url(/assets/icons/bin.svg);
+    border: none;
+    cursor: pointer;
+    width: 16px; 
+    height: 16px;
+    margin-left: auto;
+}
 
 
 @media (width < 80em) {
