Alternado o bg-color do body

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: var(--bg-primary);
+    background-color: #F6F5F2;
     width: 100vw;
     height: 100vh;
     padding-inline: 32px;
